# bifrost

./: .gitignore  BUILD-MOBILE.md  Cargo.toml  HISTORY.md  README.md  README.ru.md  ROADMAP.md
bifrost-android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
bifrost-android/app/: build.gradle.kts
bifrost-android/app/src/main/: AndroidManifest.xml
bifrost-android/app/src/main/java/org/norn/bifrost/: BifrostVpnService.kt  Logger.kt  MainActivity.kt  NativeBridge.kt  Qr.kt  QrScanActivity.kt
bifrost-android/app/src/main/res/values/: strings.xml
bifrost-cloak/: Cargo.toml
bifrost-cloak/src/: lib.rs  tls.rs  wss.rs
bifrost-core/: Cargo.toml
bifrost-core/src/: admin_proto.rs  discovery.rs  frame.rs  lib.rs  metrics.rs  mux.rs  policy.rs  reliability.rs  scoring.rs  stream.rs
bifrost-ctl/: Cargo.toml
bifrost-ctl/src/: main.rs
bifrost-ffi/: Cargo.toml
bifrost-ffi/include/: bifrost_ffi.h
bifrost-ffi/src/: android.rs  host_tun.rs  lib.rs  vhdr.rs
bifrost-socks5d/: Cargo.toml
bifrost-socks5d/src/: admin.rs  config.rs  main.rs  metrics.rs  socks5.rs
bifrost-vpnd/: Cargo.toml
bifrost-vpnd/src/: admin.rs  config.rs  egress.rs  lease_store.rs  lib.rs  main.rs  tun_dev.rs  tun_offload.rs
examples/: socks5-client.toml  socks5-exit.toml  vpn-client.toml  vpn-exit.toml  vpn-mesh.toml
tests/docker/: Dockerfile.bifrost  docker-compose.vpn.yml  docker-compose.yml  entrypoint-vpn.sh  entrypoint.sh  run-vpn.sh  run.sh
