[workspace]
resolver = "2"
members = [
    "bifrost-core",
    "bifrost-ffi",
    "bifrost-socks5d",
    "bifrost-vpnd",
    "bifrost-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alex Melan"]
repository = "https://github.com/AlexMelanFromRingo/bifrost"

[workspace.dependencies]
norn-rs       = { path = "../norn-rs", default-features = false }
tokio         = { version = "1", features = ["full"] }
anyhow        = "1"
thiserror     = "2"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
clap          = { version = "4", features = ["derive"] }
hex           = "0.4"
bytes         = "1"
rand          = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

# A debug-friendly profile for `perf record` / flamegraph runs.
# Inherits release optimisations but keeps line-table debug info
# so `perf report` resolves stack frames to function names. Use
# with `cargo build --profile release-debug`.
[profile.release-debug]
inherits = "release"
strip = false
debug = "line-tables-only"
