[package]
name = "bifrost-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reliable stream multiplexer + egress policy over norn-rs mesh PacketConn"

[dependencies]
norn-rs.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
mdns-sd = { version = "0.19", default-features = false, features = ["async"] }
serde_json.workspace = true
toml.workspace = true
bytes.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread", "test-util"] }
# Only to mint a SigningKey for a bare PacketConn in mux reconnect tests.
ed25519-dalek.workspace = true
