[package]
name = "bifrost-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "C ABI shim for bifrost-vpnd's client data plane — drives Android VpnService / iOS NEPacketTunnelProvider tunnels"

[lib]
# `staticlib` for iOS (the toolchain links into an `.a` rolled into
# the .ipa) and `cdylib` for Android (cargo-ndk emits a `.so` per ABI
# that lives in jniLibs). Both are produced by every release build;
# downstream packaging picks the right one.
crate-type = ["staticlib", "cdylib"]

[features]
# `anti-dpi` pulls in bifrost-cloak (the wss:// transport) for the
# mobile client. Off by default; enable for builds shipped into
# censored networks: `cargo ndk … build -p bifrost-ffi --features anti-dpi`.
anti-dpi = ["dep:bifrost-cloak"]

[dependencies]
bifrost-core    = { path = "../bifrost-core" }
bifrost-vpnd    = { path = "../bifrost-vpnd", default-features = false }
bifrost-cloak   = { path = "../bifrost-cloak", optional = true }
norn-rs.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Android-only: the JNI bridge so a Kotlin `VpnService` can drive the
# client data plane without a hand-written C shim, plus a file-backed
# `tracing` subscriber so the Rust-side connect/handshake logs land
# somewhere the app can read. Compiled only for `*-linux-android`.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
