[package]
name = "bifrost-socks5d"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SOCKS5 v5 (RFC 1928) proxy bridge over a norn-rs overlay mesh"

[[bin]]
name = "bifrost-socks5d"
path = "src/main.rs"

[dependencies]
bifrost-core    = { path = "../bifrost-core" }
norn-rs.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
hex.workspace = true
bytes.workspace = true
