[package]
name = "bifrost-vpnd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "TUN-based VPN daemon riding the norn-rs mesh — mesh-only or exit-routed"

[[bin]]
name = "bifrost-vpnd"
path = "src/main.rs"

[features]
default = ["tun"]
# `tun` pulls in tun2 + norn-rs's tun module. Egress mode also needs
# CAP_NET_ADMIN at runtime to bring up the device and rewrite the
# nat table — we don't try to fall back gracefully.
tun = ["norn-rs/tun-support", "dep:tun2"]

[dependencies]
bifrost-core    = { path = "../bifrost-core" }
norn-rs.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
hex.workspace = true
tun2 = { version = "3", features = ["async"], optional = true }
