[package]
name = "bifrost-vpnd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "TUN-based VPN daemon riding the norn-rs mesh — mesh-only or exit-routed"

[lib]
name = "bifrost_vpnd"
path = "src/lib.rs"

[[bin]]
name = "bifrost-vpnd"
path = "src/main.rs"

[features]
default = ["tun"]
# `tun` enables the kernel TUN paths. norn-rs's tun-support pulls
# its own `tun2` for the mesh-only mode; the exit/client modes now
# go through the hand-rolled `tun_dev` module (Linux-only, requires
# CAP_NET_ADMIN at runtime to bring up the device and rewrite the
# nat table — we don't try to fall back gracefully).
tun = ["norn-rs/tun-support"]

[dependencies]
bifrost-core    = { path = "../bifrost-core" }
norn-rs.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
hex.workspace = true

# Foundation for kernel-side TUN offload (`IFF_VNET_HDR` +
# `TUNSETOFFLOAD`). Linux-only — wraps the ioctl. The module
# (`src/tun_offload.rs`) is unconditional so its unit tests run
# everywhere; the actual ioctl is `#[cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
