[package]
name = "bifrost-vpnd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "TUN-based VPN daemon riding the norn-rs mesh — mesh-only or exit-routed"

[lib]
name = "bifrost_vpnd"
path = "src/lib.rs"

[[bin]]
name = "bifrost-vpnd"
path = "src/main.rs"

[features]
default = ["tun"]
# `tun` enables the kernel TUN paths. norn-rs's tun-support pulls
# its own `tun2` for the mesh-only mode; the exit/client modes now
# go through the hand-rolled `tun_dev` module (Linux-only, requires
# CAP_NET_ADMIN at runtime to bring up the device and rewrite the
# nat table — we don't try to fall back gracefully).
tun = ["norn-rs/tun-support"]
# `anti-dpi` pulls in the bifrost-cloak crate (the wss:// transport).
# Off by default — the default build stays the lightweight daemon.
anti-dpi = ["dep:bifrost-cloak"]

[dependencies]
bifrost-core    = { path = "../bifrost-core" }
bifrost-cloak   = { path = "../bifrost-cloak", optional = true }
norn-rs.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
hex.workspace = true

# `libc` is needed on every unix target, not just Linux: `admin.rs`
# uses `libc::umask` unconditionally, and `bifrost-ffi` compiles this
# crate for `*-linux-android` to drive the mobile client data plane.
# The Linux-only bits (the `TUNSETOFFLOAD` ioctl in `tun_offload.rs`,
# the whole of `tun_dev.rs`) stay gated with `#[cfg(target_os = "linux")]`
# inside the source.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Constructing a real PacketConn in admin module tests needs an
# ed25519 SigningKey. Workspace-level dep so the version is pinned
# in lockstep with norn-rs's own copy.
ed25519-dalek.workspace = true
